--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23620,6 +23620,16 @@
 "~^/static/font/drop-cap/GoudyInitialen-Q.ttf.*$" "/static/font/drop-cap/goudy/GoudyInitialen-Q.ttf";
 "~^/static/font/drop-cap/Cheshire-Initials-P.ttf.*$" "/static/font/drop-cap/cheshire/Cheshire-Initials-P.ttf";
 "~^/docs/ai/1988-lang$" "/docs/ai/1988-lang.pdf";
+"~^/docs/psychology/2012-Dutton.pdf.*$" "/docs/psychology/2012-dutton.pdf";
+"~^/media.wired.com/photos/60ae88cbc9a03589c58256a7/master/w_360,c_limit/Bowling-TOP-2-3Q4A0918.jpg.*$" "https://media.wired.com/photos/60ae88cbc9a03589c58256a7/master/w_360,c_limit/Bowling-TOP-2-3Q4A0918.jpg";
+"~^/Littlewood-warch.*$" "/Littlewood";
+"~^/fiction/Dinosaur-Comicshttps.*$" "/fiction/Dinosaur-Comics";
+"~^/docs/technology/2018-07-1$" "/docs/technology/2018-07-25-johnbackus-howdecentralizationevolves.html";
+"~^/docs/rotten.*/1996-animerica-conscience-otaking.*$" "/docs/eva/1996-animerica-conscience-otaking";
+"~^/docs/psychology/1952-asch.pdfGroups.*$" "/docs/psychology/1952-asch.pdf";
+"~^/docs/modafinil/darknet-market/2013-09-20.%F0$" "/docs/modafinil/darknet-market/2013-09-20.tar.xz";
+"~^/docs/darknet-markets/2013-05-1$" "/docs/darknet-markets/index";
+"~^/dgoogle-scholarocs/genetics/correlation/1998-oconnor-2.*$" "/docs/genetics/heritable/correlation/1998-oconnor-2.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -28148,6 +28158,7 @@
 "~^/M20.722,24.964c0.*$" "/static/404";
 "~^/.*2g1bet.*$" "/static/404";
 "~^/multiflay.com.*$" "/static/404";
+"~^/aurumfilm.mybb.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
