--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23630,6 +23630,46 @@
 "~^/docs/modafinil/darknet-market/2013-09-20.%F0$" "/docs/modafinil/darknet-market/2013-09-20.tar.xz";
 "~^/docs/darknet-markets/2013-05-1$" "/docs/darknet-markets/index";
 "~^/dgoogle-scholarocs/genetics/correlation/1998-oconnor-2.*$" "/docs/genetics/heritable/correlation/1998-oconnor-2.pdf";
+"~^/docs/history/2016-bello.html$" "/docs/history/2016-caro.html";
+"~^/analysis$" "/DNB-meta-analysis";
+"~^/backlinks$" "https://en.wikipedia.org/wiki/Backlink";
+"~^/Dawin$" "/reviews/Bakewell";
+"~^/Dawin-Bakewell.*$" "/reviews/Bakewell";
+"~^/docs/ai/text/index$" "/docs/ai/text-style-transfer/index";
+"~^/docs/darknet-markets/2013-08$" "/docs/darknet-markets/2013-08-14-gwernforumdiscussion.html.maff";
+"~^/docs/www/pkhungurn.github.io/s//arxiv.org/abs/1506.02025.*$" "https://arxiv.org/abs/1506.02025";
+"~^/docs/personal/2011-gwern-yourmorals.org/ztpi_process.html%C3%AE%C2.*$" "/docs/personal/2011-gwern-yourmorals.org/ztpi_process.html";
+"~^/docs/www/www.thefreelibrary.com/_/static/EmptyStar.png.*$" "http://www.thefreelibrary.com/_/static/EmptyStar.png";
+"~^/docs/www/podgorskiy.com/stylegan.html.*$" "http://podgorskiy.com/stylegan.html";
+"~^/tufte/graphics/youtube1-on.png.*$" "https://www.edwardtufte.com/tufte/graphics/youtube1-on.png";
+"~^/tufte/graphics/youtube1-off.png.*$" "https://www.edwardtufte.com/tufte/graphics/youtube1-off.png";
+"~^/tufte/graphics/vimeo-on.png.*$" "https://www.edwardtufte.com/tufte/graphics/vimeo-on.png";
+"~^/tufte/graphics/vimeo-off.png.*$" "https://www.edwardtufte.com/tufte/graphics/vimeo-off.png";
+"~^/tufte/graphics/twitter-on.png.*$" "https://www.edwardtufte.com/tufte/graphics/twitter-on.png";
+"~^/tufte/graphics/twitter-off.png.*$" "https://www.edwardtufte.com/tufte/graphics/twitter-off.png";
+"~^/tufte/graphics/RSS-col.png.*$" "https://www.edwardtufte.com/tufte/graphics/RSS-col.png";
+"~^/tufte/graphics/RSS-bw.png.*$" "https://www.edwardtufte.com/tufte/graphics/RSS-bw.png";
+"~^/tufte/graphics/itunes-on.png.*$" "https://www.edwardtufte.com/tufte/graphics/itunes-on.png";
+"~^/tufte/graphics/itunes-off.png.*$" "https://www.edwardtufte.com/tufte/graphics/itunes-off.png";
+"~^/tufte/graphics/facebook-on.png.*$" "https://www.edwardtufte.com/tufte/graphics/facebook-on.png";
+"~^/tufte/graphics/facebook-off.png.*$" "https://www.edwardtufte.com/tufte/graphics/facebook-off.png";
+"~^/docs/www/xyproto.github.io/index.html.*$" "https://xyproto.github.io/index.html";
+"~^/docs/www/xyproto.github.io/api.html.*$" "https://yproto.github.io/api.html";
+"~^/docs/www/xyproto.github.io/all.html.*$" "https://yproto.github.io/all.html";
+"~^/docs/www/blog.csdn.net/edu.csdn.net/course/detail/.*$" "https://log.csdn.net/edu.csdn.net/course/detail/";
+"~^/docs/www/blog.csdn.net/download.csdn.net/download/.*$" "https://log.csdn.net/download.csdn.net/download/";
+"~^/docs/www/blog.csdn.net/bbs.csdn.net/topics/.*$" "https://log.csdn.net/bbs.csdn.net/topics/";
+"~^/docs/www/blog.csdn.net/ask.csdn.net/questions/.*$" "https://log.csdn.net/ask.csdn.net/questions/";
+"~^/docs/nootropic/quantified-self/2019-09-06-filipdimitrovski-phenibutsurvey$" "/docs/nootropic/quantified-self/2019-09-06-filipdimitrovski-phenibutsurvey.csv";
+"~^/on-the-40th-anniversary-of-the-first-ivf-in-the-usa-the-first-baby-elizabeth-jordan-carr-looks-at-how-science-today-has-produced-a-new-world-first-baby-aurea/.*$" "https://www.ivfbabble.com/on-the-40th-anniversary-of-the-first-ivf-in-the-usa-the-first-baby-elizabeth-jordan-carr-looks-at-how-science-today-has-produced-a-new-world-first-baby-aurea/";
+"~^/haskell/Run-Length-Encoding.html.*$" "/haskell/Run-Length-Encoding";
+"~^/docs/statistics/prediction/election/%BF$" "/docs/statistics/prediction/election/index";
+"~^/docs/rotten.com/library/bio/historical/evita-peron/index.htm$" "/docs/rotten.com/library/bio/historical/evita-peron/index.html";
+"~^/docs/statistics/decision/1975-fishburn-theoryofsocialchoice.pdf.*$" "/docs/statistics/decision/1973-fishburn-theoryofsocialchoice.pdf";
+"~^/gocs/japanese/2001-debary-sourcesofjapanesetradition.pdf.*$" "http://gen.lib.rus.ec/search.php?req=%22Sources+of+Japanese+Tradition%22&open=0&res=25&view=simple&phrase=1&column=def";
+"~^/docs/iq/1963-rosenthal.pdf\).*$" "/docs/iq/1963-rosenthal.pdf";
+"~^/docs/https:/www.gwern.net/docs/longevity/2019-decabo.pdf.*$" "/docs/longevity/2019-decabo.pdf";
+"~^/static/%BF$" "/static/";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -28159,6 +28199,31 @@
 "~^/.*2g1bet.*$" "/static/404";
 "~^/multiflay.com.*$" "/static/404";
 "~^/aurumfilm.mybb.*$" "/static/404";
+"~^/talknchat.net.*$" "/static/404";
+"~^/\(ref$" "/static/404";
+"~^/malanaz.com.*$" "/static/404";
+"~^/docs/.*/location.href.*$" "/static/404";
+"~^/docs/.*element.primary_image.crops.*$" "/static/404";
+"~^/vpaid/.*$" "/static/404";
+"~^/travel-news/.*$" "/static/404";
+"~^/threepm.*$" "/static/404";
+"~^/static/uscp-web-static.*$" "/static/404";
+"~^/_service-worker.*$" "/static/404";
+"~^/redirect.*$" "/static/404";
+"~^/neo/.*$" "/static/404";
+"~^/mp4;codecs.*$" "/static/404";
+"~^/moksa/.*$" "/static/404";
+"~^/mailto/.*$" "/static/404";
+"~^/hermes/.*$" "/static/404";
+"~^/ggdc/.*$" "/static/404";
+"~^/ethos/.*$" "/static/404";
+"~^/doubleclick/.*$" "/static/404";
+"~^/docs/YOeU.*$" "/static/404";
+"~^/daytripper/.*$" "/static/404";
+"~^/csr/.*$" "/static/404";
+"~^/coverimages/.*$" "/static/404";
+"~^/akam-sw.*$" "/static/404";
+"~^/acsm-msse.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
