--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4481,3 +4481,4 @@ default "";
 "~^/docs/psychology/2017-hammers.pdf.*$" "/docs/psychology/bird/2017-hammers.pdf";
 "~^/docs/ai/1988-lang.pdf.*$" "/docs/ai/nn/fully-connected/1988-lang.pdf";
 "~^/metadata/custom.yaml.*$" "/metadata/full.yaml";
+"~^/notes/Problem-14.*" "/Problem-14";
