--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23670,6 +23670,31 @@
 "~^/docs/iq/1963-rosenthal.pdf\).*$" "/docs/iq/1963-rosenthal.pdf";
 "~^/docs/https:/www.gwern.net/docs/longevity/2019-decabo.pdf.*$" "/docs/longevity/2019-decabo.pdf";
 "~^/static/%BF$" "/static/";
+"~^/gans$" "/GANs";
+"~^/gan$" "/GANs";
+"~^/GANS$" "/GANs";
+"~^/GAns$" "/GANs";
+"~^/Gans$" "/GANs";
+"~^/[Dd]iffusions?$" "/GANs";
+"~^/docs/psychology/1949-stouffer-theamericansoldier-v1-combatanditsaftermath.pdf.*$" "/docs/psychology/1949-stouffer-theamericansoldier-v2-combatanditsaftermath.pdf";
+"~^/Wikipedia-and-Knol/$" "/Wikipedia-and-Knol";
+"~^/The-Existential-Risk-of-Mathematical-Error/$" "/The-Existential-Risk-of-Mathematical-Error";
+"~^/static/img/japanesecrest-oookashippouofoookatadasuke-sun.svg.*$" "https://commons.wikimedia.org/wiki/File:Japanese_crest_Oooka_Shippou_of_Oooka_Tadasuke.svg";
+"~^/static/font/drop-cap/Kanzlei-Initialen-Z.ttf.*$" "/static/font/drop-cap/kanzlei/Kanzlei-Initialen-Z.ttf";
+"~^/static/font/drop-cap/DeutscheZierschrift-I.ttf.*$" "/static/font/drop-cap/de-zs/DeutscheZierschrift-I.ttf";
+"~^/static/darkmode-inline.js.*$" "/static/js/dark-mode-inline.js";
+"~^/Spaced-repetitionO.*$" "/spaced-repetition";
+"~^/sawaragi/.*$" "/docs/anime/eva/little-boy/2005-sawaragi";
+"~^/otakuNapier.*$" "/otaku";
+"~^/nootropics/zeo/ZMA.*$" "/zeo/ZMA";
+"~^/LARPing/$" "/LARPing";
+"~^/images/2018-mccandlish-openai-howaitrainingscales-gradientnoisescale-summary3-scalevsbatchsize.svg.*$" "/images/ai/2018-mccandlish-openai-howaitrainingscales-gradientnoisescale-summary3-scalevsbatchsize.svg";
+"~^/http://forum.bitcoin.org/index.php?topic=29737.0.*$" "https://forum.bitcoin.org/index.php?topic=29737.0";
+"~^/docs/[a-km-z].*/The-Palace-of-Wonders.*$" "/fiction/The-Palace-of-Wonders";
+"~^/DNM-archive.*accessed.*$" "/DNM-archives";
+"~^/danmaz74/ABalytics/.*$" "https://github.com/danmaz74/ABalytics";
+"~^/conversation/david_gelernter-john_markoff-clay_shirky-lord-of-the-cloud.*$" "https://www.edge.org/conversation/david_gelernter-john_markoff-clay_shirky-lord-of-the-cloud";
+"~^/docs/google-cse.xml.*$" "/docs/personal/google-cse.xml";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -28224,6 +28249,74 @@
 "~^/coverimages/.*$" "/static/404";
 "~^/akam-sw.*$" "/static/404";
 "~^/acsm-msse.*$" "/static/404";
+"~^/zabbix/.*$" "/static/404";
+"~^/yarn.lock.*$" "/static/404";
+"~^/XMII/.*$" "/static/404";
+"~^/\..*_history.*$" "/static/404";
+"~^/.wp-config.*$" "/static/404";
+"~^/wls-wsat/.*$" "/static/404";
+"~^/.*/win\.ini.*$" "/static/404";
+"~^/WidgetHandler.*$" "/static/404";
+"~^/whoAmI.*$" "/static/404";
+"~^/webtools/.*$" "/static/404";
+"~^/webstats/.*$" "/static/404";
+"~^/websso/.*$" "/static/404";
+"~^/webservice/.*$" "/static/404";
+"~^/webpage/.*$" "/static/404";
+"~^/webmin/.*$" "/static/404";
+"~^/WEB-INF/.*$" "/static/404";
+"~^/web.config.*$" "/static/404";
+"~^/web_caps.*$" "/static/404";
+"~^/webalizer/.*$" "/static/404";
+"~^/wd/hub.*$" "/static/404";
+"~^/_vti_cnf/.*$" "/static/404";
+"~^/_vti_bin/.*$" "/static/404";
+"~^/vizportal.*$" "/static/404";
+"~^/Videos/1/.*$" "/static/404";
+"~^/uddiexplorer/.*$" "/static/404";
+"~^/typo3conf/.*$" "/static/404";
+"~^/tips/.*$" "/static/404";
+"~^/Thumbs.db.*$" "/static/404";
+"~^/text/.*$" "/static/404";
+"~^/Telerik.*$" "/static/404";
+"~^/swagger.*$" "/static/404";
+"~^/_swagger_/.*$" "/static/404";
+"~^/__swagger__/.*$" "/static/404";
+"~^/svnserve.conf.*$" "/static/404";
+"~^/struts.*$" "/static/404";
+"~^/storage.yml.*$" "/static/404";
+"~^/storage/.*$" "/static/404";
+"~^/stats/.*$" "/static/404";
+"~^/.snyk.*$" "/static/404";
+"~^/sm/login/.*$" "/static/404";
+"~^/smb.conf.*$" "/static/404";
+"~^/siteminderagent.*$" "/static/404";
+"~^/sidekiq/.*$" "/static/404";
+"~^/securityRealm/.*$" "/static/404";
+"~^/secrets.yml.*$" "/static/404";
+"~^/probe?target.*$" "/static/404";
+"~^/premise/.*$" "/static/404";
+"~^/postfixadmin/login.*$" "/static/404";
+"~^/pods.*$" "/static/404";
+"~^/pls/.*$" "/static/404";
+"~^/phppgadmin/.*$" "/static/404";
+"~^/phpmemcachedadmin/.*$" "/static/404";
+"~^/phpLiteAdmin/.*$" "/static/404";
+"~^/php-fpm.conf.*$" "/static/404";
+"~^/phpci.*$" "/static/404";
+"~^/.phpci.*$" "/static/404";
+"~^/package.json.*$" "/static/404";
+"~^/osclass/.*$" "/static/404";
+"~^/lucee/.*$" "/static/404";
+"~^/fosagent/.*$" "/static/404";
+"~^/eam/.*$" "/static/404";
+"~^/debug.*$" "/static/404";
+"~^/dbconsole/.*$" "/static/404";
+"~^/darkstat/.*$" "/static/404";
+"~^/daily/.*$" "/static/404";
+"~^/CFIDE/.*$" "/static/404";
+"~^/carbon/.*$" "/static/404";
+"~^/direct.gwern.ne.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
