--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4482,3 +4482,26 @@ default "";
 "~^/docs/ai/1988-lang.pdf.*$" "/docs/ai/nn/fully-connected/1988-lang.pdf";
 "~^/metadata/custom.yaml.*$" "/metadata/full.yaml";
 "~^/notes/Problem-14.*" "/Problem-14";
+"~^/docs/iq/2022-woodley.pdf.*$" "/docs/iq/animal/2022-woodley.pdf";
+"~^/docs/iq/2019-horschler.pdf.*$" "/docs/iq/animal/2019-horschler.pdf";
+"~^/docs/iq/2016-arden.pdf.*$" "/docs/iq/animal/2016-arden.pdf";
+"~^/docs/iq/2021-woodleyofmenie.pdf.*$" "/docs/iq/animal/2021-woodleyofmenie.pdf";
+"~^/docs/iq/2020-burgoyne-2.pdf.*$" "/docs/iq/animal/2020-burgoyne-2.pdf";
+"~^/docs/iq/2020-flaim.pdf.*$" "/docs/iq/animal/2020-flaim.pdf";
+"~^/docs/iq/2020-fernandes.pdf.*$" "/docs/iq/animal/2020-fernandes.pdf";
+"~^/docs/iq/1993-anderson.pdf.*$" "/docs/iq/animal/1993-anderson.pdf";
+"~^/docs/psychology/1985-whishaw.pdf.*$" "/docs/psychology/neuroscience/1985-whishaw.pdf";
+"~^/docs/psychology/1982-carter.pdf.*$" "/docs/psychology/neuroscience/1982-carter.pdf";
+"~^/docs/biology/1976-deiker.pdf.*$" "/docs/psychology/neuroscience/1976-deiker.pdf";
+"~^/docs/nootropic/2005-james.pdf.*$" "/docs/nootropic/caffeine/2005-james.pdf";
+"~^/docs/nootropic/2004-lesk.pdf.*$" "/docs/nootropic/caffeine/2004-lesk.pdf";
+"~^/docs/nootropic/2004-juliano.pdf.*$" "/docs/nootropic/caffeine/2004-juliano.pdf";
+"~^/docs/nootropic/2008-haskell.pdf.*$" "/docs/nootropic/caffeine/2008-haskell.pdf";
+"~^/docs/nootropic/2008-lorist.pdf.*$" "/docs/nootropic/caffeine/2008-lorist.pdf";
+"~^/docs/nootropic/2011-abreu.pdf.*$" "/docs/nootropic/caffeine/2011-abreu.pdf";
+"~^/docs/nootropic/2010-giesbrecht.pdf.*$" "/docs/nootropic/caffeine/2010-giesbrecht.pdf";
+"~^/docs/nootropic/2010-nehlig.pdf.*$" "/docs/nootropic/caffeine/2010-nehlig.pdf";
+"~^/docs/nootropic/2010-einother.pdf.*$" "/docs/nootropic/caffeine/2010-einother.pdf";
+"~^/docs/nootropic/1997-marret.pdf.*$" "/docs/nootropic/caffeine/1997-marret.pdf";
+"~^/docs/nootropic/2008-owen.pdf.*$" "/docs/nootropic/caffeine/2008-owen.pdf";
+"~^/docs/ai/nn/2020-makin.pdf.*$" "/docs/ai/nn/rnn/2020-makin.pdf";
