--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -733,6 +733,8 @@ server {
         rewrite ^/newslettter/(?<old>.*)$ /newsletter/$old permanent;
         rewrite ^/newsleter/(?<old>.*)$ /newsletter/$old permanent;
         rewrite ^/(?<old>.*)`(?<old2>.*)$ /$old$old2 permanent;
+        rewrite ^/(?<old>.*)\.page/index\.html$ /$old.page permanent;
+        rewrite ^/(?<old>.*)/N/A$ /$old permanent;
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotations/https%3A%2F%2F$original permanent;
