--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23695,6 +23695,36 @@
 "~^/danmaz74/ABalytics/.*$" "https://github.com/danmaz74/ABalytics";
 "~^/conversation/david_gelernter-john_markoff-clay_shirky-lord-of-the-cloud.*$" "https://www.edge.org/conversation/david_gelernter-john_markoff-clay_shirky-lord-of-the-cloud";
 "~^/docs/google-cse.xml.*$" "/docs/personal/google-cse.xml";
+"~^/Music-distraction/index.html.*$" "/Music-distraction";
+"~^/Media-RL/index.html.*$" "/Media-RL";
+"~^/\!W/.*$" "/static/404";
+"~^/tags/decision+theory.*$" "/docs/statistics/decision-theory/index";
+"~^/notes/statistics/bayes$" "/docs/statistics/bayes/index";
+"~^/fog$" "/fog-gun";
+"~^/docs/zeo/2009-0$" "/docs/zeo/index";
+"~^/docs/technology/2014-12-14-0$" "/docs/technology/2014-12-14-gwern-linuxadjustmenthearingloss.html";
+"~^/docs/modafinil/survey/2015-10-27-modafinil-questions$" "/docs/modafinil/survey/2015-10-27-modafinil-questions.maff";
+"~^/docs/lesswrong-survey/2013-0$" "/docs/lesswrong-survey/2013-07-22-sand-lwpoll.csv";
+"~^/docs/darknet-markets/gelliindictment-3-15-cr-00086-MBS-2-main.pdf$" "/docs/darknet-markets/gelliindictment-3-15-cr-00086-mbs-2-main.pdf";
+"~^/docs/darknet-markets/digitalink-federalcomplaint-1-13-cr-00593-CCB.pdf$" "/docs/darknet-markets/silk-road/1/digitalink-federalcomplaint-1-13-cr-00593-ccb.pdf";
+"~^/docs/darknet-markets/253456456-Silk-Road-exhibits-GX-241.pdf$" "/docs/darknet-markets/silk-road/1/253456456-silk-road-exhibits-gx-241.pdf";
+"~^/darknet-markets$" "/docs/darknet-markets/index";
+"~^/Danbooru2021Even.*$" "/Danbooru2021";
+"~^/newsletter/index/$" "/newsletter/index";
+"~^/haskell/goodreadsToMarkdown.hs/$" "/haskell/goodreadsToMarkdown.hs";
+"~^/fiction/Insert-or-Abort/$" "/fiction/Insert-or-Abort";
+"~^/fiction/Happenings/$" "/fiction/Happenings";
+"~^/fiction/Final-Gifts/$" "/fiction/Final-Gifts";
+"~^/docs/sociology/1987-rossi/$" "/docs/sociology/1987-rossi";
+"~^/docs/psychology/2006-polidoro-houdinisimpossibledemonstration.html/$" "/docs/psychology/2006-polidoro-houdinisimpossibledemonstration.html";
+"~^/docs/philosophy/2010-richardson-bythenumbers-vectors30/$" "/docs/philosophy/2010-richardson-bythenumbers-vectors30";
+"~^/docs/personal/2013-09-25-gwern-googlealertsemails.tar.xz/$" "/docs/personal/2013-09-25-gwern-googlealertsemails.tar.xz";
+"~^/docs/link-bibliography/index/$" "/docs/link-bibliography/index";
+"~^/docs/culture/2007-wolfe/$" "/docs/culture/2007-wolfe";
+"~^/docs/culture/1983-wolfe-thecitadeloftheautarch-thejustman/$" "/docs/culture/1983-wolfe-thecitadeloftheautarch-thejustman";
+"~^/docs/culture/1963-asimov/$" "/docs/culture/1963-asimov";
+"~^/docs/341$" "/docs/index";
+"~^/docs/1$" "/docs/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -28317,6 +28347,84 @@
 "~^/CFIDE/.*$" "/static/404";
 "~^/carbon/.*$" "/static/404";
 "~^/direct.gwern.ne.*$" "/static/404";
+"~^/Anal-12.*$" "/static/404";
+"~^/AvalancheWeb/.*$" "/static/404";
+"~^/BKP.*$" "/static/404";
+"~^/beta.*$" "/static/404";
+"~^/BAK.*$" "/static/404";
+"~^/back.*$" "/static/404";
+"~^/docs/touhou/%C3%83%C2%A5%C3%8.*$" "/static/404";
+"~^/members.*$" "/static/404";
+"~^/kickinketo.net.*$" "/static/404";
+"~^/staging.*$" "/static/404";
+"~^/site_old.*$" "/static/404";
+"~^/sitebackup.*$" "/static/404";
+"~^/zdm/.*$" "/static/404";
+"~^/..0x5c..0x5c...*$" "/static/404";
+"~^/.%252e/.*$" "/static/404";
+"~^/%2e/.*$" "/static/404";
+"~^/%2e%2e%2e%2e%2e%.*$" "/static/404";
+"~^/%2e%2e%5c%2e%2e%.*$" "/static/404";
+"~^/..%3B/.*$" "/static/404";
+"~^/.%5C%5C./.*$" "/static/404";
+"~^/..%5c..%5c..%5.*$" "/static/404";
+"~^/%5cgoogle.com/.*$" "/static/404";
+"~^/adjuncts/.*$" "/static/404";
+"~^/AirWatch/.*$" "/static/404";
+"~^/alps/.*$" "/static/404";
+"~^/anchor/.*$" "/static/404";
+"~^/apcupsd/.*$" "/static/404";
+"~^/apex/.*$" "/static/404";
+"~^/Api/.*$" "/static/404";
+"~^/arena/.*$" "/static/404";
+"~^/Audio/.*$" "/static/404";
+"~^/avatar/.*$" "/static/404";
+"~^/axis/.*$" "/static/404";
+"~^/bonita/.*$" "/static/404";
+"~^/Catalog/.*$" "/static/404";
+"~^/catalog-portal/.*$" "/static/404";
+"~^/ccmivr/.*$" "/static/404";
+"~^/ccm-web/.*$" "/static/404";
+"~^/cfide/.*$" "/static/404";
+"~^/cfide-scripts/.*$" "/static/404";
+"~^/cfmx/.*$" "/static/404";
+"~^/cf-scripts/.*$" "/static/404";
+"~^/CF_SFSD/.*$" "/static/404";
+"~^/cfusion/.*$" "/static/404";
+"~^/__clockwork/.*$" "/static/404";
+"~^/cloud/.*$" "/static/404";
+"~^/confluence/.*$" "/static/404";
+"~^/containers/.*$" "/static/404";
+"~^/controller/.*$" "/static/404";
+"~^/cors_proxy/.*$" "/static/404";
+"~^/costModule/.*$" "/static/404";
+"~^/crx/.*$" "/static/404";
+"~^/CSCOSSLC/.*$" "/static/404";
+"~^/+CSCOT+/.*$" "/static/404";
+"~^/_debug_toolbar/.*$" "/static/404";
+"~^/docpicker/.*$" "/static/404";
+"~^/dokuwiki/.*$" "/static/404";
+"~^/domcfg.nsf/.*$" "/static/404";
+"~^/druid/.*$" "/static/404";
+"~^/elfinder/.*$" "/static/404";
+"~^/ELMAH/.*$" "/static/404";
+"~^/esp/.*$" "/static/404";
+"~^/etc/.*$" "/static/404";
+"~^/fgt_lang.*$" "/static/404";
+"~^/filter/.*$" "/static/404";
+"~^/fmlurlsvc/.*$" "/static/404";
+"~^/gespage/.*$" "/static/404";
+"~^/getCorsFile.*$" "/static/404";
+"~^/grafana/.*$" "/static/404";
+"~^/h2-console/.*$" "/static/404";
+"~^/hac/.*$" "/static/404";
+"~^/hawtio/.*$" "/static/404";
+"~^/hmc/.*$" "/static/404";
+"~^/horde/.*$" "/static/404";
+"~^/hub/.*$" "/static/404";
+"~^/iam/.*$" "/static/404";
+"~^/identity/.*$" "/static/404";
+"~^/index.action.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
