--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4505,3 +4505,4 @@ default "";
 "~^/docs/nootropic/1997-marret.pdf.*$" "/docs/nootropic/caffeine/1997-marret.pdf";
 "~^/docs/nootropic/2008-owen.pdf.*$" "/docs/nootropic/caffeine/2008-owen.pdf";
 "~^/docs/ai/nn/2020-makin.pdf.*$" "/docs/ai/nn/rnn/2020-makin.pdf";
+"~^/docs/dual-n-back/2000-duval.pdf.*$" "/docs/statistics/meta-analysis/2000-duval.pdf";
