--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23725,6 +23725,17 @@
 "~^/docs/culture/1963-asimov/$" "/docs/culture/1963-asimov";
 "~^/docs/341$" "/docs/index";
 "~^/docs/1$" "/docs/index";
+"~^/docs/psychiatry/add/index.*$" "/docs/psychiatry/adhd/index";
+"~^/Danbooru2021Th.*$" "/Danbooru2021";
+"~^/order$" "/Order-statistics";
+"~^/n.*/Zen-and-the-Art-of-Bicycle-Maintenance.*$" "/Zen-and-the-Art-of-Bicycle-Maintenance";
+"~^/docs/technology/2013-02-1$" "/docs/technology/2013-02-07-nyrb-rich-divingdeepintodanger.html";
+"~^/docs/sociology/1980-patton-quali$" "/docs/sociology/1980-patton-qualitativeevaluationmethods.pdf";
+"~^/docs/philosophy/epistemology/2012-decruz-trustintestimonyandmiracles$" "/docs/philosophy/epistemology/2012-decruz-trustintestimonyandmiracles.html";
+"~^/docs/personality/conscientiousness/index.*$" "/docs/psychology/personality/conscientiousness/index";
+"~^/docs/music-distraction/1972-fox.Effects.*$" "/docs/music-distraction/1972-fox.pdf";
+"~^/docs/fiction/2014-01$" "/docs/fiction/2014-01-10-thepracticalconservative-whybroniesaresuperiortotheneoreaction.html";
+"~^/docs/cat/catnip/survey/2017-08-10-0$" "/docs/cat/catnip/survey/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -28425,6 +28436,8 @@
 "~^/iam/.*$" "/static/404";
 "~^/identity/.*$" "/static/404";
 "~^/index.action.*$" "/static/404";
+"~^/cookie-policy/.*$" "/static/404";
+"~^/accounts/.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
