--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -4506,3 +4506,4 @@ default "";
 "~^/docs/nootropic/2008-owen.pdf.*$" "/docs/nootropic/caffeine/2008-owen.pdf";
 "~^/docs/ai/nn/2020-makin.pdf.*$" "/docs/ai/nn/rnn/2020-makin.pdf";
 "~^/docs/dual-n-back/2000-duval.pdf.*$" "/docs/statistics/meta-analysis/2000-duval.pdf";
+"~^/docs/psychiatry/2021-ghirardi.pdf.*$" "/docs/psychiatry/adhd/2021-ghirardi.pdf";
