--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -3223,7 +3223,7 @@ default "";
 "~^/docs/ai/2018-sharma.pdf.*$" "/docs/ai/diffusion/2018-sharma.pdf";
 "~^/docs/ai/2019-02-18-lecun-isscc-talk-deeplearninghardwarepastpresentandfuture.pdf.*$" "/docs/ai/scaling/2019-02-18-lecun-isscc-talk-deeplearninghardwarepastpresentandfuture.pdf";
 "~^/docs/ai/2019-abdal.pdf.*$" "/docs/ai/gan/stylegan/2019-abdal.pdf";
-"~^/docs/ai/2019-bashivan.pdf.*$" "/docs/ai/adversarial/2019-bashivan.pdf";
+"~^/docs/ai/2019-bashivan.pdf.*$" "/docs/ai/nn/adversarial/2019-bashivan.pdf";
 "~^/docs/ai/2019-dai.pdf.*$" "/docs/ai/anime/2019-dai.pdf";
 "~^/docs/ai/2019-gervais.pdf.*$" "/docs/ai/poetry/2019-gervais.pdf";
 "~^/docs/ai/2020-05-05-tjukanov-mapdreameraicartography.html.*$" "/docs/ai/gan/stylegan/2020-05-05-tjukanov-mapdreameraicartography.html";
@@ -4507,3 +4507,18 @@ default "";
 "~^/docs/ai/nn/2020-makin.pdf.*$" "/docs/ai/nn/rnn/2020-makin.pdf";
 "~^/docs/dual-n-back/2000-duval.pdf.*$" "/docs/statistics/meta-analysis/2000-duval.pdf";
 "~^/docs/psychiatry/2021-ghirardi.pdf.*$" "/docs/psychiatry/adhd/2021-ghirardi.pdf";
+"~^/docs/genetics/heritable/2021-sherman.pdf.*$" "/docs/genetics/heritable/rare-variants/2021-sherman.pdf";
+"~^/docs/genetics/heritable/2021-rodin.pdf.*$" "/docs/genetics/heritable/rare-variants/2021-rodin.pdf";
+"~^/docs/psychiatry/2021-sasson.pdf.*$" "/docs/psychiatry/autism/2021-sasson.pdf";
+"~^/docs/genetics/heritable/2020-taylor.pdf.*$" "/docs/genetics/heritable/rare-variants/2020-taylor.pdf";
+"~^/docs/algernon/2015-yuen.pdf.*$" "/docs/genetics/heritable/rare-variants/2015-yuen.pdf";
+"~^/docs/genetics/heritable/2019-zhou.pdf.*$" "/docs/genetics/heritable/rare-variants/2019-zhou.pdf";
+"~^/docs/genetics/heritable/2018-werling.pdf.*$" "/docs/genetics/heritable/rare-variants/2018-werling.pdf";
+"~^/docs/psychiatry/1990-hermelin.pdf.*$" "/docs/psychiatry/autism/1990-hermelin.pdf";
+"~^/docs/psychiatry/2021-cheslackpostava.pdf.*$" "/docs/psychiatry/autism/2021-cheslackpostava.pdf";
+"~^/docs/psychiatry/1977-folstein.pdf.*$" "/docs/psychiatry/autism/1977-folstein.pdf";
+"~^/docs/technology/2018-carleton.pdf.*$" "/docs/sociology/technology/2018-carleton.pdf";
+"~^/docs/psychology/2019-habib.pdf.*$" "/docs/psychology/neuroscience/2019-habib.pdf";
+"~^/docs/psychiatry/2021-hislegorman.pdf.*$" "/docs/psychiatry/anxiety/2021-hislegorman.pdf";
+"~^/docs/psychology/2021-huang.pdf.*$" "/docs/psychiatry/alzheimers/2021-huang.pdf";
+"~^/docs/psychology/2020-tu.pdf.*$" "/docs/psychology/neuroscience/2020-tu.pdf";
