--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -697,6 +697,7 @@ server {
         rewrite ^/docs/ai/clip/(?<old>.*)$ /docs/ai/nn/transformer/clip/$old permanent;
         rewrite ^/docs/ai/sparsity/(?<old>.*)$ /docs/ai/nn/sparsity/$old permanent;
         rewrite ^/docs/ai/retrieval/(?<old>.*)$ /docs/ai/nn/retrieval/$old permanent;
+        rewrite ^/docs/ai/adversarial/(?<old>.*)$ /docs/ai/nn/adversarial/$old permanent;
         rewrite ^/docs/japanese/(?<old>.*)$ /docs/japan/$old permanent;
         rewrite ^/docs/japan/zeami/(?<old>.*)$ /docs/japan/poetry/zeami/$old permanent;
         rewrite ^/(?<original>docs/.*)/[0-9]$ /$original permanent;
@@ -734,6 +735,7 @@ server {
         rewrite ^/newsleter/(?<old>.*)$ /newsletter/$old permanent;
         rewrite ^/(?<old>.*)`(?<old2>.*)$ /$old$old2 permanent;
         rewrite ^/(?<old>.*)\.page/index\.html$ /$old.page permanent;
+        rewrite ^/(?<old>.*)\.page/$ /$old.page permanent;
         rewrite ^/(?<old>.*)/N/A$ /$old permanent;
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
