--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23736,6 +23736,20 @@
 "~^/docs/music-distraction/1972-fox.Effects.*$" "/docs/music-distraction/1972-fox.pdf";
 "~^/docs/fiction/2014-01$" "/docs/fiction/2014-01-10-thepracticalconservative-whybroniesaresuperiortotheneoreaction.html";
 "~^/docs/cat/catnip/survey/2017-08-10-0$" "/docs/cat/catnip/survey/index";
+"~^/GT3$" "/GPT-3";
+"~^/docs/culture/2010-dobelli.pjdf.*$" "/docs/culture/2010-dobelli.pdf";
+"~^/docs/japan/2002-gibson$" "/docs/japan/art/2002-gibson";
+"~^/Danbooru2020--.*$" "/Danbooru2020";
+"~^/dnm-surviva.*$" "/DNM-survival";
+"~^/docs/anime/danbooru2021-sfw512px-torrent.tar.xz.*$" "/Danbooru2021#download";
+"~^/docs/cs/2005-09-30-smith-whyihateframeworks.htm$" "/docs/cs/2005-09-30-smith-whyihateframeworks.html";
+"~^/docs/fiction/science-fiction/1986-moore-watchmen-chapter8-watchmaker.pdf.*$" "/docs/fiction/science-fiction/1986-moore-watchmen-chapter4-watchmaker.pdf";
+"~^/docs/japan/teika$" "/docs/japan/poetry/teika/index";
+"~^/docs/technology/2017-02-%C.*$" "/docs/technology/2017-02-05-cms-ahistoryofimdbforums.html";
+"~^/docs/psychology/2020-10-G.*$" "/docs/psychology/2020-10-26-dyqz-rdataisbeautiful-iasked16kpeoplehowmanyholescertainobjectshave.html";
+"~^/docs/music-distraction/1999-furnham-2.pdf.-.*$" "/docs/music-distraction/1999-furnham-2.pdf";
+"~^/docs/darknet-markets/agora/2014-12-22-%C2%BF.*$" "/docs/darknet-markets/agora/2014-12-22-pacer-willyclock.maff";
+"~^/docs/anime/eva/images/notenkimemoirs/blueblazes/10-2.webm$" "/images/notenki-memoirs/blue-blazes/10-2.webm";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
@@ -28438,6 +28452,11 @@
 "~^/index.action.*$" "/static/404";
 "~^/cookie-policy/.*$" "/static/404";
 "~^/accounts/.*$" "/static/404";
+"~^/.*thor-cookies,div.cookie-alert,div.cooki.*$" "/static/404";
+"~^/.*widget-advert.text-cente.*$" "/static/404";
+"~^/hastaresort.*$" "/static/404";
+"~^/Riar-Anapa.*$" "/static/404";
+"~^/docs/www/learning.mpi-sws.org/data/example2.json.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
