--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -674,6 +674,7 @@ server {
         rewrite ^/docs/eva/(?<old>.*)$ /docs/anime/eva/$old permanent;
         rewrite ^/docs/conscientiousness/(?<old>.*)$ /docs/psychology/personality/conscientiousness/$old permanent;
         rewrite ^/docs/spaced-repetition/(?<old>.*)$ /docs/psychology/spaced-repetition/$old permanent;
+        rewrite ^/docs/psychology/bird/(?<old>.*)$ /docs/psychology/animal/bird/$old permanent;
         rewrite ^/docs/prediction/(?<old>.*)$ /docs/statistics/prediction/$old permanent;
         rewrite ^/docs/terrorism/(?<old>.*)$ /docs/crime/terrorism/$old permanent;
         rewrite ^/docs/statistics/crime/terrorism/(?<old>.*)$ /docs/crime/terrorism/$old permanent;
@@ -698,6 +699,8 @@ server {
         rewrite ^/docs/ai/sparsity/(?<old>.*)$ /docs/ai/nn/sparsity/$old permanent;
         rewrite ^/docs/ai/retrieval/(?<old>.*)$ /docs/ai/nn/retrieval/$old permanent;
         rewrite ^/docs/ai/adversarial/(?<old>.*)$ /docs/ai/nn/adversarial/$old permanent;
+        rewrite ^/docs/ai/diffusion/(?<old>.*)$ /docs/ai/nn/diffusion/$old permanent;
+        rewrite ^/images/ai/diffusion/(?<old>.*)$ /images/ai/nn/diffusion/$old permanent;
         rewrite ^/docs/japanese/(?<old>.*)$ /docs/japan/$old permanent;
         rewrite ^/docs/japan/zeami/(?<old>.*)$ /docs/japan/poetry/zeami/$old permanent;
         rewrite ^/(?<original>docs/.*)/[0-9]$ /$original permanent;
