--- a/redirects/nginx-broken.conf
+++ b/redirects/nginx-broken.conf
@@ -23750,6 +23750,10 @@
 "~^/docs/music-distraction/1999-furnham-2.pdf.-.*$" "/docs/music-distraction/1999-furnham-2.pdf";
 "~^/docs/darknet-markets/agora/2014-12-22-%C2%BF.*$" "/docs/darknet-markets/agora/2014-12-22-pacer-willyclock.maff";
 "~^/docs/anime/eva/images/notenkimemoirs/blueblazes/10-2.webm$" "/images/notenki-memoirs/blue-blazes/10-2.webm";
+"~^/static/404\?redirectUrl\=https://www.gwern.net/docs/www/spectrum.ieee.org/62118984f0a8e510c378c9810186dcb813d2f0fb.html.*$" "/docs/www/spectrum.ieee.org/62118984f0a8e510c378c9810186dcb813d2f0fb.html";
+"~^/danbooru2021/index.html.*$" "/Danbooru2021";
+"~^/docs/genetics/heritable/1987-zimen.pdf.*Wolfdogs.*$" "/docs/genetics/heritable/1987-zimen.pdf";
+"~^/agents$" "/Tool-AI";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^.*aspx.*$" "/static/404";
