--- a/redirects/nginx.conf
+++ b/redirects/nginx.conf
@@ -3220,7 +3220,7 @@ default "";
 "~^/docs/ai/2013-yudkowsky.pdf.*$" "/docs/ai/scaling/2013-yudkowsky.pdf";
 "~^/docs/ai/2014-cambria.pdf.*$" "/docs/ai/scaling/2014-cambria.pdf";
 "~^/docs/ai/2017-shen.pdf.*$" "/docs/ai/scaling/2017-shen.pdf";
-"~^/docs/ai/2018-sharma.pdf.*$" "/docs/ai/diffusion/2018-sharma.pdf";
+"~^/docs/ai/2018-sharma.pdf.*$" "/docs/ai/nn/diffusion/2018-sharma.pdf";
 "~^/docs/ai/2019-02-18-lecun-isscc-talk-deeplearninghardwarepastpresentandfuture.pdf.*$" "/docs/ai/scaling/2019-02-18-lecun-isscc-talk-deeplearninghardwarepastpresentandfuture.pdf";
 "~^/docs/ai/2019-abdal.pdf.*$" "/docs/ai/gan/stylegan/2019-abdal.pdf";
 "~^/docs/ai/2019-bashivan.pdf.*$" "/docs/ai/nn/adversarial/2019-bashivan.pdf";
@@ -4471,14 +4471,14 @@ default "";
 "~^/docs/genetics/heritable/correlation/2021-daghlas.pdf.*$" "/docs/genetics/heritable/correlation/mendelian-randomization/2021-daghlas.pdf";
 "~^/docs/genetics/heritable/2021-yengo.pdf.*$" "/docs/genetics/heritable/rare-variants/2021-yengo.pdf";
 "~^/metadata/partial.yaml$" "/metadata/half.yaml";
-"~^/docs/psychology/2022-crampton.pdf.*$" "/docs/psychology/bird/2022-crampton.pdf";
-"~^/docs/psychology/neuroscience/2022-sol.pdf.*$" "/docs/psychology/bird/neuroscience/2022-sol.pdf";
-"~^/docs/psychology/neuroscience/2015-swift.pdf.*$" "/docs/psychology/bird/2015-swift.pdf";
-"~^/docs/psychology/neuroscience/2020-herculanohouzel.pdf.*$" "/docs/psychology/bird/neuroscience/2020-herculanohouzel.pdf";
-"~^/docs/psychology/neuroscience/2021-kirschhock.pdf.*$" "/docs/psychology/bird/neuroscience/2021-kirschhock.pdf";
-"~^/docs/psychology/neuroscience/2020-nieder.pdf.*$" "/docs/psychology/bird/neuroscience/2020-nieder.pdf";
-"~^/docs/psychology/neuroscience/2020-stacho.pdf.*$" "/docs/psychology/bird/neuroscience/2020-stacho.pdf";
-"~^/docs/psychology/2017-hammers.pdf.*$" "/docs/psychology/bird/2017-hammers.pdf";
+"~^/docs/psychology/2022-crampton.pdf.*$" "/docs/psychology/animal/bird/2022-crampton.pdf";
+"~^/docs/psychology/neuroscience/2022-sol.pdf.*$" "/docs/psychology/animal/bird/neuroscience/2022-sol.pdf";
+"~^/docs/psychology/neuroscience/2015-swift.pdf.*$" "/docs/psychology/animal/bird/2015-swift.pdf";
+"~^/docs/psychology/neuroscience/2020-herculanohouzel.pdf.*$" "/docs/psychology/animal/bird/neuroscience/2020-herculanohouzel.pdf";
+"~^/docs/psychology/neuroscience/2021-kirschhock.pdf.*$" "/docs/psychology/animal/bird/neuroscience/2021-kirschhock.pdf";
+"~^/docs/psychology/neuroscience/2020-nieder.pdf.*$" "/docs/psychology/animal/bird/neuroscience/2020-nieder.pdf";
+"~^/docs/psychology/neuroscience/2020-stacho.pdf.*$" "/docs/psychology/animal/bird/neuroscience/2020-stacho.pdf";
+"~^/docs/psychology/2017-hammers.pdf.*$" "/docs/psychology/animal/bird/2017-hammers.pdf";
 "~^/docs/ai/1988-lang.pdf.*$" "/docs/ai/nn/fully-connected/1988-lang.pdf";
 "~^/metadata/custom.yaml.*$" "/metadata/full.yaml";
 "~^/notes/Problem-14.*" "/Problem-14";
@@ -4522,3 +4522,31 @@ default "";
 "~^/docs/psychiatry/2021-hislegorman.pdf.*$" "/docs/psychiatry/anxiety/2021-hislegorman.pdf";
 "~^/docs/psychology/2021-huang.pdf.*$" "/docs/psychiatry/alzheimers/2021-huang.pdf";
 "~^/docs/psychology/2020-tu.pdf.*$" "/docs/psychology/neuroscience/2020-tu.pdf";
+"~^/docs/genetics/heritable/1987-zimen.pdf.*$" "/docs/genetics/heritable/dog/1987-zimen.pdf";
+"~^/docs/psychology/2019-taiz.pdf.*$" "/docs/psychology/animal/2019-taiz.pdf";
+"~^/docs/psychology/1996-petrie.pdf.*$" "/docs/psychology/animal/1996-petrie.pdf";
+"~^/docs/psychology/1927-stone.pdf.*$" "/docs/psychology/animal/1927-stone.pdf";
+"~^/docs/psychology/2019-kilmer.pdf.*$" "/docs/psychology/neuroscience/2019-kilmer.pdf";
+"~^/docs/psychology/2014-vyssoki.pdf.*$" "/docs/psychiatry/depression/2014-vyssoki.pdf";
+"~^/docs/psychology/1997-weiss.pdf.*$" "/docs/dog/1997-weiss.pdf";
+"~^/docs/psychology/2009-ramsden.pdf.*$" "/docs/psychology/animal/2009-ramsden.pdf";
+"~^/docs/psychology/2008-alper.pdf.*$" "/docs/psychology/animal/2008-alper.pdf";
+"~^/docs/psychology/2002-kuhlmeier.pdf.*$" "/docs/psychology/animal/2002-kuhlmeier.pdf";
+"~^/docs/psychology/1967-zubin-comparativepsychopathology.pdf.*$" "/docs/psychology/animal/1967-zubin-comparativepsychopathology.pdf";
+"~^/docs/psychology/1954-mitchell.pdf.*$" "/docs/psychology/neuroscience/1954-mitchell.pdf";
+"~^/docs/iq/1963-rosenthal.pdf.*$" "/docs/iq/animal/1963-rosenthal.pdf";
+"~^/docs/genetics/selection/1972-wahlsten.pdf.*$" "/docs/genetics/selection/artificial/1972-wahlsten.pdf";
+"~^/docs/psychology/1924-davis.pdf.*$" "/docs/psychology/animal/1924-davis.pdf";
+"~^/docs/psychology/1925-tolman.pdf.*$" "/docs/psychology/animal/1925-tolman.pdf";
+"~^/docs/psychology/1927-tolman.pdf.*$" "/docs/psychology/animal/1927-tolman.pdf";
+"~^/docs/psychology/1930-tryon.pdf.*$" "/docs/psychology/animal/1930-tryon.pdf";
+"~^/docs/psychology/1931-tryon-3.pdf.*$" "/docs/psychology/animal/1931-tryon-3.pdf";
+"~^/docs/psychology/1931-tryon.pdf.*$" "/docs/psychology/animal/1931-tryon.pdf";
+"~^/docs/psychology/1931-tryon-2.pdf.*$" "/docs/psychology/animal/1931-tryon-2.pdf";
+"~^/docs/psychology/1931-tryon-4.pdf.*$" "/docs/psychology/animal/1931-tryon-4.pdf";
+"~^/docs/psychology/1933-heron.pdf.*$" "/docs/psychology/animal/1933-heron.pdf";
+"~^/docs/psychology/1939-tryon.pdf.*$" "/docs/psychology/animal/1939-tryon.pdf";
+"~^/docs/psychology/1940-tryon.pdf.*$" "/docs/psychology/animal/1940-tryon.pdf";
+"~^/docs/psychology/1940-tryon-2.pdf.*$" "/docs/psychology/animal/1940-tryon-2.pdf";
+"~^/docs/psychology/1941-tryon.pdf.*$" "/docs/psychology/animal/1941-tryon.pdf";
+"~^/docs/psychology/1941-tryon-2.pdf.*$" "/docs/psychology/animal/1941-tryon-2.pdf";
